--- a/app/assets/stylesheets/card-stack.css.scss
+++ b/app/assets/stylesheets/card-stack.css.scss
@@ -22,31 +22,24 @@ input {
   width: 50px; }
 
 #viewport {
-  width: 460px;
-  height: 470px;
+  width: 300px;
+  height: 340px;
   /*background: #C7433E;*/
   border: 2px solid #f0f0f0;
   margin: 10px auto 0;
   position: relative; }
   #viewport .stack {
-    min-width: 400px;
-    min-height: 400px;
+    max-width: 280px;
+    height: 300px;
     background: #f7f5f4;
     position: absolute;
     top: 20px;
     left: 50%;
-    margin-left: -210px;
+    margin-left: -140px;
     border-radius: 10px; }
-
-
-/* Media Query */
-
-
-
-
   #viewport li {
-    min-width: 400px;
-    min-height: 400px;
+    max-width: 280px;
+    height: 300px;
     list-style: none;
     background: #fff;
     border-radius: 5px;
@@ -58,7 +51,7 @@ input {
     padding-top: 10px;
     text-align: center;
     font-size: 2.5em;
-
+    
     border: 10px solid #ECECEC;
     box-sizing: border-box;
     cursor: default; }
