--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<div class="select-gender">
+<!-- <div class="select-gender"> -->
   <h1>Shop...</h1>
   <div class="select-buttons-div">
     <div class="select-button" id="select-mens">
@@ -8,4 +8,12 @@
       <a href="/items/category/<%= 'womens' %>">WOMENS</a>
     </div>
   </div>
-</div>
+<!-- </div> -->
+
+<script>
+$(document).ready(function(){
+  $('body').addClass('select-gender');
+  $('.back').addClass('display-none');
+});
+  
+</script>
