--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -340,17 +340,18 @@ a {
 
 @media screen and (max-width: 600px) {
   .select-gender {
-    background-image: url('http://i.imgur.com/uQipJkN.jpg?1');
-    width: 100%;
-    height: 100%;
-    background-position: center top;
-    background-size: cover;
-    background-repeat: no-repeat;
- /*   padding-bottom: 157%;*/
-    height: 0;
-    text-align: center;
-    position: fixed;
-
+    background-image       : url('http://i.imgur.com/uQipJkN.jpg?1');
+    width                  : 100%;
+    height                 : 100%;
+    background-position    : center top;
+    background-repeat      : no-repeat;   
+    text-align             : center;
+    position               : absolute;
+    background-size        : cover;
+    -webkit-background-size: cover;
+    -moz-background-size   : cover;
+    -o-background-size     : cover;
+    background-color: #111;
   }
 
   .select-buttons-div {
@@ -376,13 +377,12 @@ a {
 
 @media screen and (min-width: 600px) {
     .select-gender {
-    background-image: url('http://i.imgur.com/uQipJkN.jpg?1');
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center top;
-    text-align: center;
+    background-image       : url('http://i.imgur.com/uQipJkN.jpg?1');
+    position               : absolute;
+    height                 : 100%;
+    width                  : 100%;
+    background-repeat      : no-repeat;
+    background-position    : center top bottom;
     background-size        : cover;
     -webkit-background-size: cover;
     -moz-background-size   : cover;
